# ExcludeFromCapture

./: Cargo.toml  README.md  build.rs
bindings/: Cargo.toml  build.rs
src/: dllsub.c  main.rs  manifest.xml  utility.rs
