[package]
name = "ExcludeFromCapture"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bindings = { path = "bindings" }
windows = "0.17.2"
winit = "0.25.0"
raw-window-handle = "0.3.3"

[build-dependencies]
embed-resource = "1.6.3"
cc = "1.0.69"
